--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "firebase": "^8.6.1",
     "framer-motion": "^2.0.0-beta.77",
     "gh-pages": "^3.1.0",
+    "js-cookie": "^2.2.1",
+    "js-cookies": "^1.0.4",
     "react": "^16.13.1",
     "react-avatar": "^3.10.0",
     "react-dom": "^16.13.1",
+    "react-google-login": "^5.2.2",
     "react-progressive-image": "^0.6.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
@@ -23,7 +28,9 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.26.9",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "styled-components": "^5.3.0",
+    "styled-loaders-react": "^1.1.0"
   },
   "scripts": {
     "predeploy": "npm run build",
